# lunaris

./: .dockerignore  .env.sample  .gitignore  .gitleaks.toml  Dockerfile.api  Dockerfile.cover  Dockerfile.worker  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: cd-dev.yml  cd-inference.yml  cd-prod.yml  ci.yml  release-please.yml
.memory/live-build-stream/: implementation.md  requirements.md
apps/api/: pyproject.toml
apps/api/src/lunaris_api/: __init__.py  app.py  capabilities.py  config.py  corpus_service.py  cover_display_transform.py  cover_enqueue.py  cover_thumbs.py  cover_worker_entrypoint.py  credential_vault.py  dependencies.py  device_bridge_registry.py  draft_throttle.py  explain_throttle.py  progress_sink.py  run_event_recorder.py  run_registry.py  service.py  worker_entrypoint.py
apps/api/src/lunaris_api/activity/: __init__.py  aggregate.py  emitter.py  learning_event.py  memory_store.py  store_protocol.py  store_unavailable_error.py  supabase_store.py
apps/api/src/lunaris_api/admin_users/: __init__.py  account.py  directory_protocol.py  memory_directory.py  supabase_directory.py
apps/api/src/lunaris_api/auth/: __init__.py  _supabase.py  auth_error.py  composite_user_verifier.py  jwks_user_verifier.py  jwt_user_verifier.py  user_claims.py  user_verifier.py
apps/api/src/lunaris_api/bookmarks/: __init__.py  bookmark.py  memory_store.py  store_protocol.py  store_unavailable_error.py  supabase_store.py
apps/api/src/lunaris_api/config_store/: __init__.py  store.py
apps/api/src/lunaris_api/explain/: __init__.py  binding.py  claude.py  protocol.py
apps/api/src/lunaris_api/prod_ops/: __init__.py  arm_client.py  azure_provider.py  compute.py  cost.py  fake_provider.py  power.py  provider_protocol.py  summary.py
apps/api/src/lunaris_api/progress/: __init__.py  course_state_mark.py  lesson_mark.py  memory_store.py  objective_mark.py  rollups.py  store_protocol.py  store_unavailable_error.py  supabase_store.py
apps/api/src/lunaris_api/routers/: _correlation.py  activity.py  admin_users.py  app_config.py  authorities.py  bookmarks.py  bridge.py  briefs.py  capabilities.py  corpus.py  courses.py  covers.py  credentials.py  explain.py  health.py  keyless.py  me.py  prod_ops.py  progress.py  runs.py  settings.py  signup_gate.py  videos.py
apps/api/src/lunaris_api/schemas/: __init__.py  activity.py  admin_users.py  app_config.py  authorities.py  base.py  bookmarks.py  bridge.py  brief_response.py  capabilities.py  compute.py  corpus.py  course_request.py  credentials.py  explain.py  keyless_readiness.py  library.py  me.py  prod_ops.py  progress.py  settings.py  signup_gate.py
apps/api/src/lunaris_api/secrets/: __init__.py  credential_store_protocol.py  crypto.py  memory_credential_store.py  store.py  supabase_credential_store.py  validator.py
apps/api/src/lunaris_api/signup_gate/: __init__.py  errors.py  gate.py  memory_store.py  service.py  store_protocol.py  supabase_store.py
apps/api/src/lunaris_api/user_config/: __init__.py  memory_store.py  service.py  store_protocol.py  supabase_store.py
apps/api/tests/: _auth.py  _doubles.py  conftest.py  test_activity_aggregation.py  test_activity_api.py  test_activity_emission.py  test_admin_users_api.py  test_authorities_api.py  test_bookmarks_api.py  test_briefs_api.py  test_byok_injection_api.py  test_byok_provider_lockstep.py  test_byok_vault_e2e.py  test_cancel_run_api.py  test_capabilities_api.py  test_config.py  test_config_api.py  test_corpus_api.py  test_cors.py  test_course_store_selection.py  test_courses_api.py  test_cover_auto_enqueue.py  test_cover_dependencies.py  test_covers_api.py  test_credential_store.py  test_credential_vault.py  test_credentials_api.py  test_delete_course_api.py  test_delete_course_bookmarks_activity_cascade.py  test_delete_course_cover_cascade.py  test_delete_course_full_purge.py  test_delete_course_grounding_cascade.py  test_delete_course_progress_cascade.py  test_delete_course_video_cascade.py  test_device_bridge_api.py  test_device_bridge_variants.py  test_draft_throttle.py  test_draft_throttle_api.py  test_elevenlabs_validator.py  test_explain_api.py  (+29 more)
documentation/: README.md  architecture.md  build-a-course-walkthrough.md  build-pipeline.md  course-build-pipeline.md  deployment.md  getting-started.md  grounding-model.md  grounding.md  lunaris-overview.md  prod-ops-admin.md  relevance-model.md  relevance.md  video-observability.md
infra/: alerts.bicep  app.bicep  cover.bicep  embeddings.bicep  gpu-env.bicep  inference.bicep  main.bicep  main.dev.bicepparam  main.prod.bicepparam  prod-ops-control.bicep  video.bicep
scripts/: check-ports.sh  help.sh  ingest.py  ingest.sh  install.sh  run-linters.sh  run-tests.sh  run.sh  video-deps.sh
supabase/: config.toml
(+763 files in other folders)
