[project]
name = "lunaris"
version = "0.0.0"
description = "Lunaris — agentic course-synthesis engine (monorepo root)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "psycopg[binary]>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "ASYNC", "SIM", "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps", "tests"]
addopts = ["-m", "not eval"]
markers = [
    "eval: live LLM eval against golden graphs (needs a real key; excluded by default)",
]
