[project]
name = "lunaris-api"
version = "0.0.0"
description = "Lunaris API — FastAPI delivery service over the course-object pipeline"
requires-python = ">=3.12"
dependencies = [
    "lunaris-agent",
    "lunaris-runtime",
    "lunaris-grounding",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    "python-multipart>=0.0.18",
    "pyjwt[crypto]>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lunaris_api"]

[tool.uv.sources]
lunaris-agent = { workspace = true }
lunaris-runtime = { workspace = true }
lunaris-grounding = { workspace = true }
