[project]
name = "lunaris-api"
version = "0.0.0"
description = "Lunaris API — FastAPI delivery service over the course-object pipeline"
requires-python = ">=3.12"
dependencies = [
    "lunaris-agent",
    "lunaris-runtime",
    "lunaris-grounding",
    "lunaris-video",
    "lunaris-covers",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    # Security floor: CVE-2026-53539 (quadratic-time querystring DoS) is fixed in 0.0.30.
    "python-multipart>=0.0.30",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    # Security floor: GHSA-537c-gmf6-5ccf (vulnerable OpenSSL in the wheels) is fixed in 48.0.1.
    # Capped below 49 for now — the major bump isn't vetted against the BYOK AES-GCM path yet.
    "cryptography>=48.0.1,<49",
]

[project.optional-dependencies]
# The dedicated video-worker image (Dockerfile.worker / explainer-video V7) reuses the API's exact
# composition (dependencies.py) so the cloud worker resolves per-job tenant keys from the vault with
# zero drift from the in-process worker — and it also needs the Manim render toolchain. Pull it in
# via lunaris-video's own `render` extra (Manim CE) rather than re-declaring Manim here. The lean API
# image (Dockerfile.api) syncs WITHOUT this extra, so it never carries Manim.
render = ["lunaris-video[render]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lunaris_api"]

[tool.uv.sources]
lunaris-agent = { workspace = true }
lunaris-runtime = { workspace = true }
lunaris-grounding = { workspace = true }
lunaris-video = { workspace = true }
lunaris-covers = { workspace = true }
